Add updated index

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   </head>
   <body>
     <h1>Eric Martindale's Presentations</h1>
+    <p>For materials related to these presentations, please see <a href="events">the list of events I've given them at</a>.</p>
     <ul>
       <li><a href="beyond-bitcoin">The Blockchain: Beyond Bitcoin</a></li>
       <li><a href="bitcore-stack">The Bitcore Stack</a></li>
       <li><a href="copay-wallet">Copay: the Wallet for Everyone</a></li>
+      <li><a href="elements-project">The Elements Project: a Community of Collaborators</a></li>
       <li><a href="why-maki">Why Maki?</a></li>
     </ul>
   </body>
